# easy-captcha

./: Cargo.toml  README.md
example/: http_demo.rs
src/captcha/: mod.rs  rotate.rs
