[package]
name = "easy-captcha"
version = "0.1.0"
edition = "2021"

[[example]]
name = "http_demo"
path = "example/http_demo.rs"

[dependencies]
image = "0.25.1"
imageproc = "0.25.0"
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0.0", features = ["derive"] }
rand = "0.8.5"

[dev-dependencies]
actix-web = "4.0.1"